<resources>
    <string name="app_name">VegenatShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="user_menu">Menú de usuario</string>

    <string name="menu_home">Home</string>
    <string name="menu_preguntasfrecuentes">Preguntas frecuentes</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_lista_compra">Lista de la compra</string>
    <string name="menu_pedidos">Mis pedidos</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_logout">Cerrar sesión</string>
    <string name="title_edit">Editar usuario</string>
    <string name="title_delete">Borrar usuario</string>
    <string name="title_activity_register">Registrar usuario</string>
    <string name="title_activity_product_details">Información del producto</string>

</resources>