<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/empty"
        android:icon="@drawable/user"
        android:title="@string/user_menu"
        android:orderInCategory="102"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/login_action"
                android:orderInCategory="100"
                android:icon="@drawable/iniciar_sesion"
                android:title="@string/title_activity_login"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/register_action"
                android:orderInCategory="100"
                android:icon="@drawable/registrar_usuario"
                android:title="@string/title_activity_register"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/cerrar_sesion"
                android:orderInCategory="100"
                android:icon="@drawable/cerrar_sesion"
                android:title="@string/title_logout"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/editar_usuario"
                android:orderInCategory="100"
                android:icon="@drawable/editar_usuario"
                android:title="@string/title_edit"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/borrar_usuario"
                android:orderInCategory="100"
                android:icon="@drawable/borrar_user"
                android:title="@string/title_delete"
                app:showAsAction="always|withText"/>
        </menu>
    </item>
</menu>